[gd_scene load_steps=9 format=2]

[ext_resource path="res://stats.gd" type="Script" id=1]
[ext_resource path="res://stats_pic.png" type="Texture" id=2]
[ext_resource path="res://pricedown bl.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 65
outline_color = Color( 0.827451, 0.65098, 0.65098, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_color = Color( 0.498039, 0.188235, 0.529412, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[node name="TitleMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="StatsPic" type="Sprite" parent="."]
position = Vector2( 512, 299.25 )
scale = Vector2( 1.00787, 1.01092 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 120.0
margin_top = 48.0
margin_right = 943.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 1 )
text = "Congradulations, You win!!

"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Label2" type="Label" parent="."]
margin_left = 440.0
margin_top = 160.0
margin_right = 616.0
margin_bottom = 232.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Stats:"
align = 3
valign = 3

[node name="time3" type="Label" parent="."]
margin_left = 336.0
margin_top = 256.0
margin_right = 736.0
margin_bottom = 328.0
rect_pivot_offset = Vector2( 104, 64 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )

[node name="Label3" type="Label" parent="."]
margin_left = 333.0
margin_top = 320.0
margin_right = 789.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 4 )

[node name="Label4" type="Label" parent="."]
margin_left = 336.0
margin_top = 384.0
margin_right = 680.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
